SellerEntity
Adding, deleting items
Adding new seller
Adding new client, adding founds to a client, editing client information
