# src/main/java/pl/akademiaspecjalistowit/ecommerce/api/SellerController.java
@@ -7,7 +7,9 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.context.request.NativeWebRequest;
 import pl.akademiaspecjalistowit.api.SellerApi;
 import pl.akademiaspecjalistowit.ecommerce.item.service.ItemService;
+import pl.akademiaspecjalistowit.ecommerce.seller.service.SellerService;
 import pl.akademiaspecjalistowit.model.AddItemRequest;
+import pl.akademiaspecjalistowit.model.AddSellerRequest;
 import pl.akademiaspecjalistowit.model.UpdateItemPriceRequest;
 
 import java.util.Optional;
@@ -18,10 +20,10 @@ import java.util.UUID;
 @AllArgsConstructor
 public class SellerController implements SellerApi {
     private ItemService itemService;
+    private SellerService sellerService;
 
     @Override
     public ResponseEntity<Void> addItem(AddItemRequest addItemRequest) {
-        log.info("Adding item");
         itemService.registerItem(addItemRequest);
         return ResponseEntity.ok().build();
     }
@@ -31,4 +33,17 @@ public class SellerController implements SellerApi {
         itemService.updateItemPrice(updateItemPriceRequest);
         return ResponseEntity.ok().build();
     }
+
+    @Override
+    public ResponseEntity<Void> addSeller(AddSellerRequest addSellerRequest) {
+        sellerService.addSeller(addSellerRequest);
+        return ResponseEntity.ok().build();
+    }
+
+    @Override
+    public ResponseEntity<Void> deleteItem(String itemTechnicalId, String sellerTechnicalId) {
+        itemService.deleteItem(itemTechnicalId, sellerTechnicalId);
+        return ResponseEntity.ok().build();
+    }
+
 }
