# src/main/resources/contract/api.yaml
@@ -5,27 +5,46 @@ info:
 servers:
   - url: http://localhost:8080/
 paths:
-  /seller/item/price:
-    patch:
-      summary: Aktualizacja ceny przedmiotu
-      description: Metoda do aktualizacji ceny danego przedmiotu
-      operationId: updateItemPrice
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                technicalId:
-                  type: string
-                price:
-                  type: string
+  /guest/items/:
+    get:
+      summary: Pobranie dostępnych przedmiotów
+      description: Metoda do poprania wszystkich dostępnych przedmiotów.
+      operationId: getItems
+      parameters:
+        - name: minPrice
+          in: query
+          required: false
+          schema:
+            type: number
+        - name: maxPrice
+          in: query
+          required: false
+          schema:
+            type: number
+        - name: category
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: page
+          in: query
+          required: true
+          schema:
+            type: number
+        - name: pageSize
+          in: query
+          required: true
+          schema:
+            type: number
       responses:
         '200':
-          description: Poprawnie zaktualizowano cenę przedmiotu
-        '400':
-          description: Niepoprawne dane
+          description: Poprawnie wysłano przedmioty
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Item'
         '500':
           description: Błąd serwera
   /warehouse/update/stock:
@@ -145,43 +164,6 @@ paths:
           description: Niepoprawne dane
         '500':
           description: Błąd serwera
-  /guest/items:
-    get:
-      summary: Pobranie dostępnych przedmiotów
-      description: Metoda do poprania wszystkich dostępnych przedmiotów.
-      operationId: getItems
-      responses:
-        '200':
-          description: Poprawnie wysłano przedmioty
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Item'
-        '500':
-          description: Błąd serwera
-  /seller/items/add:
-    post:
-      summary: Dodanie przedmiotu przez sprzedwacę
-      description: Metoda do dodania przedmiotu.
-      operationId: addItem
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                item:
-                  $ref: '#/components/schemas/Item'
-      responses:
-        '200':
-          description: Poprawanie dodano przedmiot
-        '400':
-          description: Nieprawidłowe dane
-        '500':
-          description: Błąd serwera
   /client/register:
     post:
       summary: Rejestracja nowego klienta
@@ -203,7 +185,7 @@ paths:
           description: Nieprawidłowe dane
         '500':
           description: Bład serwera
-  /client/account:
+  /client/account/wallet:
     post:
       summary: Zasilenie konta klienta
       description: Metoda do zasilania konta klienta określoną kwotą.
@@ -227,8 +209,142 @@ paths:
           description: Nieprawidłowe dane
         '500':
           description: Błąd serwera
+  /client/account/address:
+    post:
+      summary: Zmiana informacji o adresie, imieniu i nazwisku klienta
+      description: Metoda do zmiany informacji o koncie; adres, imie oraz nazwisko
+      operationId: addClientInformation
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                technicalId:
+                  type: string
+                  description: UUID klienta zmieniającego dane
+                name:
+                  type: string
+                  description: imię klienta
+                surname:
+                  type: string
+                  description: nazwisko klienta
+                address:
+                  $ref: '#/components/schemas/Address'
+      responses:
+        '200':
+          description: Konto zaktualizowane pomyślnie
+        '400':
+          description: Nieprawidłowe dane
+        '500':
+          description: Błąd serwera
+  /seller/register:
+    post:
+      summary: Dodanie sprzedwacy
+      description: Metoda do dodania sprzedawcy.
+      operationId: addSeller
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                seller:
+                  $ref: '#/components/schemas/Seller'
+      responses:
+        '200':
+          description: Poprawanie dodano sprzedawcę
+        '400':
+          description: Nieprawidłowe dane
+        '500':
+          description: Błąd serwera
+  /seller/item/add:
+    post:
+      summary: Dodanie przedmiotu przez sprzedwacę
+      description: Metoda do dodania przedmiotu.
+      operationId: addItem
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                item:
+                  $ref: '#/components/schemas/Item'
+                sellerTechId:
+                  type: string
+      responses:
+        '200':
+          description: Poprawanie dodano przedmiot
+        '400':
+          description: Nieprawidłowe dane
+        '500':
+          description: Błąd serwera
+  /seller/item/delete/{itemTechnicalId}/{sellerTechnicalId}:
+    delete:
+      summary: Usuwanie przedmiotu przez sprzedawcę
+      description: Metoda do usuwania przedmiotu
+      operationId: deleteItem
+      parameters:
+        - name: itemTechnicalId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: sellerTechnicalId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Poprawanie usunięto przedmiot
+        '400':
+          description: Nieprawidłowe dane
+        '500':
+          description: Błąd serwera
+  /seller/item/price:
+    patch:
+      summary: Aktualizacja ceny przedmiotu
+      description: Metoda do aktualizacji ceny danego przedmiotu
+      operationId: updateItemPrice
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                technicalId:
+                  type: string
+                price:
+                  type: string
+      responses:
+        '200':
+          description: Poprawnie zaktualizowano cenę przedmiotu
+        '400':
+          description: Niepoprawne dane
+        '500':
+          description: Błąd serwera
 components:
   schemas:
+    Seller:
+      type: object
+      properties:
+        companyName:
+          type: string
+          description: Nazwa firmy sprzedawcy
+        address:
+          $ref: '#/components/schemas/Address'
+        email:
+          type: string
+          description: Email sprzedawcy
+        password:
+          type: string
+          description: Zaszyfrowane hasło
     Order:
       type: object
       properties:
@@ -305,8 +421,7 @@ components:
       type: object
       properties:
         value:
-          type: number
-          format: float
+          type: string
           description: Wartość kwoty
         currency:
           type: string
